# pedalburg

./: .gitignore  .vscodeignore  CHANGELOG.md  LICENSE.txt  README.md  package-lock.json  package.json  tsconfig.json
.github/: publish.yml
.github/workflows/: publish.yml
editors/scene/: global.d.ts  index.html  package-lock.json  package.json  vite.config.ts
editors/scene/src/: App.css  App.tsx
editors/scene/src/components/: EditorWrapper.tsx  Grid.tsx  Scene.tsx  SceneGrid.tsx  SidePanel.tsx  VSCodeWrapper.tsx
editors/scene/src/components/panels/: ActorPanel.tsx  ScenePanel.tsx
editors/scene/src/types/: junebug.ts  vscode.ts
editors/scene/src/utils/: helpers.ts  junebug.ts  vscode.ts
resources/: .gitignore.txt  .gitmodules.txt  CMakeLists.txt  main.cpp
src/: constants.ts  extension.ts  gameAssets.ts  project.ts  utils.ts
src/fileEditors/: index.ts  scene.ts
